# glazewm-debug

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: API.md  ARCHITECTURE.md  BUILDING.md  CONTRIBUTE.md  DISPLAY.md  USAGE.md
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs  update.rs
src/cli/: client.rs  errors.rs  mod.rs  parser.rs
src/domain/: errors.rs  mod.rs  monitor.rs  values.rs  window.rs  workspace.rs
src/tui/: app.rs  input.rs  mod.rs  render.rs
src/utils/: mod.rs  text_width.rs
tests/unit/: mod.rs
tests/unit/domain/: mod.rs  monitor_test.rs  window_test.rs  workspace_test.rs
